# teliwayws-lib

./: Cargo.toml  Readme.md  request.http
src/: auth.rs  error.rs  lib.rs  position.rs  reclamation.rs  soap_ws.rs  tiers.rs
src/position/: mark.rs  mark_event.rs  mod.rs  request.rs  response.rs
src/position/soap/: request.rs  response.rs
src/reclamation/: create.rs  request.rs  response.rs
src/reclamation/soap/: request.rs  response.rs
src/tiers/: create_update.rs  mod.rs  request.rs  response.rs  siret_edi.rs
src/tiers/soap/: request.rs  response.rs
src/utils/: date.rs  mod.rs  xml.rs
