[package]
name = "teliwayws-lib"
version = "0.5.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
maud = "0.27"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
