[package]
name = "teliwayws-lib"
version = "0.9.0"
edition = "2024"

[dependencies]
async-trait = "0.1.*"
chrono = { version = "0.4.*", features = ["serde"] }
log = "0.4.*"
maud = "0.27.*"
quick-xml = { version = "0.38.*", features = ["serialize"] }
regex = "1.11.*"
reqwest = { version = "0.12.*", features = ["json"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
