[package]
name = "teliwayws-lib"
version = "0.10.0"
edition = "2024"

[dependencies]
async-trait = "=0.1.89"
chrono = { version = "=0.4.42", features = ["serde"] }
log = "=0.4.29"
maud = "=0.27.0"
quick-xml = { version = "=0.38.4", features = ["serialize"] }
regex = "=1.11.2"
reqwest = { version = "=0.12.25", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
